- added a badge and fixed css overlap

--- a/scss-partials/_header.scss
+++ b/scss-partials/_header.scss
@@ -355,7 +355,7 @@ body {
                 
                 .shopping-cart {
                     display: inline-block;
-                    padding: 23px 15px;
+                    padding: 0 15px;
                     
                     position: relative;
                     z-index: 10;
@@ -364,11 +364,27 @@ body {
                     .cart-btn {
                         font-size:22px;
                         font-weight: 200;
-                        color:rgba(0, 0, 0, 0.65);   
+                        color:rgba(0, 0, 0, 0.65);
+                        position: relative;
                                          
                         &:hover {
                             color:#252525;
                             text-decoration: none;
+                        }
+                        
+                        .badge {
+                            background-color:#595417;
+                            border:1px solid $yellow;
+                            @include border-radius(50%);
+                            position: absolute;
+                            top: -2px;
+                            right: -5px;
+                            width: 15px;
+                            height: 15px;
+                            padding: 0;
+                            font-size: 8px;
+                            padding-top:2px;
+                            display: none;
                         }
                     }
                     
@@ -457,7 +473,7 @@ body {
                 
                 .sign-in {
                     display: inline-block;
-                    padding: 23px 15px;
+                    padding: 0 15px;
                     
                     position: relative;
                     z-index: 10;
